# tmj-editorial-intelligence

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_BRIEF.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: articles.py  briefs.py  enrichment.py  health.py  ingestion.py  sources.py  themes.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: client.py
backend/app/db/repositories/: articles.py  briefs.py  enrichment.py  ingestion_runs.py  sources.py  themes.py
backend/app/schemas/: articles.py  briefs.py  enrichment.py  ingestion.py  sources.py  themes.py
backend/app/services/brief/: openai_client.py  prompts.py  schema.py  service.py
backend/app/services/enrichment/: openai_client.py  prompts.py  schema.py  scoring.py  service.py
backend/app/services/ingestion/: extractor.py  fetcher.py  parser.py  service.py
backend/tests/: test_ingestion_extractor.py  test_ingestion_parser.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/articles/: page.tsx
frontend/app/briefs/: page.tsx
frontend/app/sources/: page.tsx
frontend/app/workflow/: page.tsx
frontend/components/: BriefView.tsx  Nav.tsx  StateMessage.tsx
frontend/lib/: api.ts  types.ts
supabase/migrations/: 001_initial_schema.sql  002_seed_source.sql  003_add_raw_html_to_articles.sql  004_enrichment_schema.sql  005_briefs_schema.sql  006_source_management_fields.sql
(+2 files in other folders)
