[project]
name = "tmj-editorial-intelligence-backend"
version = "0.1.0"
description = "TMJ Editorial Intelligence — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
